added xrefs for sections in the inspection tab

--- a/html/Inspection/Insp_EMPENNAGE.html
+++ b/html/Inspection/Insp_EMPENNAGE.html
@@ -22,7 +22,7 @@
   <tr>
     <td class="cellInspectionNumber">E5</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check Neoprene washer at elevator down stop. (See Maintenance Section, ELEVATORS.)</td>
+    <td class="cellInspectionText">Check Neoprene washer at elevator down stop. (See <xref sectionTarget="2.45.4" prependLabel="Section"></xref>)</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">E6</td>
@@ -42,7 +42,7 @@
   <tr>
     <td class="cellInspectionNumber">E9</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Inspect horizontal stabilizer struts and fittings for corrosion, erosion, and cracking as referenced in S/L #198.  Check bolt torque and tighten check nuts.  (See Maintenance Section, STABILIZER RIGGING).</td>
+    <td class="cellInspectionText">Inspect horizontal stabilizer struts and fittings for corrosion, erosion, and cracking as referenced in S/L #198.  Check bolt torque and tighten check nuts.  (See <xref sectionTarget="2.45.3" prependLabel="Section"></xref>).</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">E10</td>
@@ -72,7 +72,7 @@
     <tr>
     <td class="cellInspectionNumber">E15</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Remove gap covers from stabilizers and check torque on bolts attaching stabilizers to fuselage. (See Maintenance Section, HORIZONTAL STABILIZERS.)</td>
+    <td class="cellInspectionText">Remove gap covers from stabilizers and check torque on bolts attaching stabilizers to fuselage. (See <xref sectionTarget="2.45.1" prependLabel="Section"></xref>)</td>
   </tr>
     <tr>
     <td class="cellInspectionNumber">E16</td>
