--- a/html/Inspection/Insp_FLAPS.html
+++ b/html/Inspection/Insp_FLAPS.html
@@ -23,11 +23,11 @@
   </tr><tr>
     <td class="cellInspectionNumber">F6</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Check flap travel and rigging. (See Maintenance Section, AILERON AND FLAP RIGGING.)</td>
+    <td class="cellInspectionText">Check flap travel and rigging. (See <xref sectionTarget="2.30.1" prependLabel="Section"></xref>)</td>
   </tr><tr>
     <td class="cellInspectionNumber">F7</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Check flap pushrod bolt for straightness. (See Maintenance Section, FLAPS.)</td>
+    <td class="cellInspectionText">Check flap pushrod bolt for straightness. (See <xref sectionTarget="2.70" prependLabel="Section"></xref>.)</td>
   </tr><tr>
     <td class="cellInspectionNumber">F8</td>
     <td class="cellInspectionInterval">(12 Months)</td>
