--- a/html/Inspection/Insp_GENERAL.html
+++ b/html/Inspection/Insp_GENERAL.html
@@ -3,7 +3,7 @@
         <td class="cellInspectionNumber">G1</td>
         <td class="cellInspectionInterval">(---)</td>
         <td class="cellInspectionText">
-            Check <xref sectionTarget="4" prependLabel="Section"></xref> (Lubrication) for necessary
+            Check <xref sectionTarget="4" prependLabel="Section"></xref> for necessary
             lubrication tasks.
         </td>
     </tr>
