--- a/html/Inspection/Insp_MAIN LANDING GEAR AND BRAKES.html
+++ b/html/Inspection/Insp_MAIN LANDING GEAR AND BRAKES.html
@@ -12,7 +12,7 @@
    <tr>
     <td class="cellInspectionNumber">MLG3</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check master cylinders for leaks, test firmness of brakes and bleed (if necessary), check for ample fluid in brake reservoir. (See Maintenance Section, BRAKE BLEEDING).</td>
+    <td class="cellInspectionText">Check master cylinders for leaks, test firmness of brakes and bleed (if necessary), check for ample fluid in brake reservoir. (See <xref sectionTarget="2.90.13" prependLabel="Section"></xref>).</td>
   </tr>
    <tr>
     <td class="cellInspectionNumber">MLG4</td>
@@ -27,7 +27,7 @@
    <tr>
     <td class="cellInspectionNumber">MLG6</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Check main gear clamp block for security and for straightness using a straight edge. Check attach bolts visually. (Refer to Maintenance Section, MAIN GEAR SPRING.)</td>
+    <td class="cellInspectionText">Check main gear clamp block for security and for straightness using a straight edge. Check attach bolts visually. (Refer to <xref sectionTarget="2.90.4" prependLabel="Section"></xref>)</td>
   </tr>
    <tr>
     <td class="cellInspectionNumber">MLG7</td>
@@ -37,6 +37,6 @@
    <tr>
     <td class="cellInspectionNumber">MLG8</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Check torque on main gear attach bolts. (See Maintenance Section MAIN GEAR SPRING).</td>
+    <td class="cellInspectionText">Check torque on main gear attach bolts. (See <xref sectionTarget="2.90.4" prependLabel="Section"></xref>).</td>
   </tr>
 </table>
