--- a/html/Inspection/Insp_WINGS.html
+++ b/html/Inspection/Insp_WINGS.html
@@ -17,22 +17,18 @@
   <tr>
     <td class="cellInspectionNumber">W4</td>
     <td class="cellInspectionInterval">(1,000)</td>
-    <td class="cellInspectionText">Remove and inspect the rear spar bolt per instructions in the Maintenance Section,
-      WING
-      ATTACHMENT TO FUSELAGE.</td>
+    <td class="cellInspectionText">Remove and inspect the rear spar bolt per instructions in <xref sectionTarget="2.100.1" prependLabel="Section"></xref>.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">W5</td>
     <td class="cellInspectionInterval">(2,000)</td>
-    <td class="cellInspectionText">Inspect the wing center splice connection as described in the Maintenance Section,
-      WING
-      CENTER SPLICE CONNECTION.</td>
+    <td class="cellInspectionText">Inspect the wing center splice connection as described in <xref sectionTarget="2.100.2" prependLabel="Section"></xref>.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">W6</td>
     <td class="cellInspectionInterval">(2000)</td>
     <td class="cellInspectionText">Loosen (one at a time) the four AN6 bolts through the wing attach angles and rotate ¼
-      turn to insure that they are not frozen. (See Section 2 – WING ATTACHMENT TO FUSELAGE).</td>
+      turn to insure that they are not frozen. (See <xref sectionTarget="2.100.1" prependLabel="Section"></xref>).</td>
   </tr>
 
   <tr>
