--- a/html/Inspection/Insp_TAIL GEAR.html
+++ b/html/Inspection/Insp_TAIL GEAR.html
@@ -12,12 +12,12 @@
   <tr>
     <td class="cellInspectionNumber">TLG3</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Jack tail wheel clear of ground and check for looseness of housing on spring. (See Maintenance Section TAIL WHEEL FORK HOUSING).</td>
+    <td class="cellInspectionText">Jack tail wheel clear of ground and check for looseness of housing on spring. (See <xref sectionTarget="2.90.5" prependLabel="Section"></xref>).</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">TLG4</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">With tail wheel off ground, rotate wheel for signs of dry wheel bearings. Check for looseness on axle, check locking pin for free engagement to fork, check fork for looseness in housing, check for wear on brass wear plate. (See Maintenance Section TAIL WHEEL FORK)</td>
+    <td class="cellInspectionText">With tail wheel off ground, rotate wheel for signs of dry wheel bearings. Check for looseness on axle, check locking pin for free engagement to fork, check fork for looseness in housing, check for wear on brass wear plate. (See <xref sectionTarget="2.90.6" prependLabel="Section"></xref>)</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">TLG5</td>
@@ -37,6 +37,6 @@
   <tr>
     <td class="cellInspectionNumber">TLG8</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Jack under the stabilizer strut fitting and check for looseness of the tail spring to the fuselage frame. (See Maintenance Section, TAIL GEAR SPRING).  Also change the forward spring attach bolt.  Check condition of aluminum pad under spring.</td>
+    <td class="cellInspectionText">Jack under the stabilizer strut fitting and check for looseness of the tail spring to the fuselage frame. (See <xref sectionTarget="2.90.8" prependLabel="Section"></xref>).  Also change the forward spring attach bolt.  Check condition of aluminum pad under spring.</td>
   </tr>
 </table>
