--- a/html/Inspection/SCHEDULED INSPECTIONS.html
+++ b/html/Inspection/SCHEDULED INSPECTIONS.html
@@ -1,5 +1,5 @@
 <p>This manufacturer inspection program provides for the complete inspection of the aircraft each 12 calendar months.</p>
-<p>This manufacturer inspection program is required by 14 CFR §91.409(f)(3) and must include all 6 Month and 12 Month items, all 100-, 200-, & 300-hour items, applicable airworthiness directives, service letters, service information letters and those items listed in applicable engine, propeller, and appliance maintenance manuals <span style="color: red;">(Refer to Section 1 – General – Instructions for Continued Airworthiness (ICA's) -  LIST OF MANUALS AND DOCUMENTS).</span></p>
+<p>This manufacturer inspection program is required by 14 CFR §91.409(f)(3) and must include all 6 Month and 12 Month items, all 100-, 200-, & 300-hour items, applicable airworthiness directives, service letters, service information letters and those items listed in applicable engine, propeller, and appliance maintenance manuals. (Refer to <xref sectionTarget="1.0.2" prependLabel="Section"></xref>)</p>
 <p>All months referenced in this section are “calendar" months. (For example: If the 12-month inspection was completed on January 10, 2025, the next 12-month inspection is due no later than January 31, 2026).</p>
 <p>The operator may choose to perform the 100-, 200-, and 300-hour inspection items in conjunction with the 12-month inspection. Alternatively, the operator may choose to perform the 100-, 200-, and 300-hour inspection items in accordance with the procedures listed in the Hourly Inspections and Interval Tolerance listed below, again, if these items are inspected at least each calendar year.</p>
 <p>All other applicable calendar and hourly inspection items must be accomplished when they become due.</p>
@@ -9,4 +9,4 @@
 
 <p>Maintenance to your plane is to be accomplished by or under the direct supervision of an authorized person or entity and is to be returned to service before the plane is operated. Inspections are to be accomplished by an appropriately rated person or entity and must determine that the plane is in airworthy condition. To be in airworthy condition the plane must meet the type design, the approved design from the factory, and or be altered in accordance with approved data.</p>
 
-<p>The symbol (---) indicates a reference to additional INSTRUCTIONS FOR CONTINUED AIRWORTHINESS."</p>
+<p>The symbol (---) indicates a reference to additional instructions stated in <xref sectionTarget="1.0.2" prependLabel="Section"></xref>.</p>
