added xref for section lubrication

--- a/html/Lubrication/12 Month.html
+++ b/html/Lubrication/12 Month.html
@@ -1,7 +1,6 @@
 <p class="dontBreakAfter"><b>Use General Purpose Grease</b></p>
 <ol type="1">
-    <li>Clean and hand pack the Torrington bearings in the rear elevator idler. <span style="color: red;">See Section 2-
-            ELEVATOR CONTROLS.</span></li>
+    <li>Clean and hand pack the Torrington bearings in the rear elevator idler. Refer to <xref sectionTarget="2.30.4" prependLabel="Section"></xref> </li>
     <li>Leaving the control rods attached, remove the boost-tab pivot assemblies at the outboard
         ends of the aileron tabs, at the inboard ends of the elevator tabs, and at the lower end of the
         rudder boost tab. Remove the boost tabs from the tab pivots at the opposite ends of the tabs.
