cal section updates

--- a/html/Maintenance/Analog Engine Instrument Calibration.html
+++ b/html/Maintenance/Analog Engine Instrument Calibration.html
@@ -373,7 +373,7 @@
         <td class="plainTableNormalCell centerText" colspan="3">Ref: Dwg 52357, Form 5010</td>
     </tr>
     <tr>
-        <td class="plainTableNormalCell centerText" colspan="3">Calibrate to 5252ft-lb if 1600HP STC is installed.</td>
+        <td class="plainTableNormalCell centerText" colspan="3">*Calibrate to 5252ft-lb if 1600HP STC is installed.</td>
     </tr>
 </table>
 
@@ -768,6 +768,7 @@ provided in this section.
         <td class="plainTableNormalCell centerText" colspan="3">Ref: Dwg 51489 and PS150</td>
     </tr>
 </table>
+<p>Dan wanted to see how this works.</p>
 <p>If the gauge is out of tolerance, it is useful to determine if the gauge or the probe is the source of the problem.  The probe is an MS28034 temperature bulb which provides a resistance that varies with temperature as described in MIL-T-7990B.  A high precision resistor can be used to simulate a temperature.  Install the resistor across the cannon plug contacts.  100 ohms should result in a temperature gauge reading of 30°C.</p>
 <p>The temp bulb resistance at various temperatures is provided in the table below.</p>
 <table class="marginTop1 plainTableMedium">
