--- a/html/Maintenance/Analog Engine Instrument Calibration.html
+++ b/html/Maintenance/Analog Engine Instrument Calibration.html
@@ -1,5 +1,5 @@
 <p class="dontBreakAfter"><b>Pressure Sensors</b></p>
-<p>It is typical for operators to remove the torque, oil pressure and fuel pressure gauges from their aircraft in order to send them to a shop for calibration.  This is a perfectly accpetable procedure.</p>
+<p>It is typical for operators to remove the torque, oil pressure and fuel pressure gauges from their aircraft in order to send them to a shop for calibration.  This is a perfectly acceptable procedure.</p>
 <p>If it is preferable to calibrate the gauges in the airplane, it can be accomplished using a pressure tester, also known as a dead weight tester, such as an Additel 927 or Barfield 2311F with an acceptable and calibrated gauge.</p>
 
 <p>Disconnect the hose from the engine side, connect the tester and ensure that no air is in the lines then proceed with pressure testing.</p>
@@ -768,7 +768,7 @@ provided in this section.
         <td class="plainTableNormalCell centerText" colspan="3">Ref: Dwg 51489 and PS150</td>
     </tr>
 </table>
-<p>Dan wanted to see how this works.</p>
+
 <p>If the gauge is out of tolerance, it is useful to determine if the gauge or the probe is the source of the problem.  The probe is an MS28034 temperature bulb which provides a resistance that varies with temperature as described in MIL-T-7990B.  A high precision resistor can be used to simulate a temperature.  Install the resistor across the cannon plug contacts.  100 ohms should result in a temperature gauge reading of 30°C.</p>
 <p>The temp bulb resistance at various temperatures is provided in the table below.</p>
 <table class="marginTop1 plainTableMedium">
