throttle description updates

--- a/html/Description/Kawak Throttle Quadrant.html
+++ b/html/Description/Kawak Throttle Quadrant.html
@@ -1,4 +1,8 @@
+<p>The Kawak throttle quadrant replaces the Air Tractor throttle quadrant and it operates similarly.</p>
 
-<div style="background-color: lightblue;">
-    <p>The Kawak throttle quadrant replaces the Air Tractor throttle quadrant</p>
-</div>
+<figure>
+    <img class="imageCentered_3x3" src="img/img_KawakThrottleQuadrant.png">
+    <figcaption class="centerText">Air Tractor Throttle Quadrant</figcaption>
+</figure>
+
+<p>The Kawak throttle quadrant can also come equipped with the Power Stop feature which is an adjustable torque lever stop that allows for pre-selection of desired max torque.</p>
