added FCU description content

--- a/html/Description/FCU MANUAL OVERRIDE.html
+++ b/html/Description/FCU MANUAL OVERRIDE.html
@@ -1,1 +1,6 @@
-<p style="color:red">CONTENT NOT CREATED</p>
+<p>The FCU override is optionally installed in AT-802's.  It provides a means to override engine fuel control in the event of certain FCU failures.</p>
+<p>The system consists of a control handle mounted on the cockpit floor oh the LH side and a control cable that runs to the FCU.</p>
+<figure>
+    <img class="imageCentered_4x4" src="img/img_FcuOverride.png">
+    <figcaption class="centerText">FCU Override Handle</figcaption>
+</figure>
