added figure xref

--- a/html/Description/Kawak Throttle Quadrant.html
+++ b/html/Description/Kawak Throttle Quadrant.html
@@ -1,4 +1,4 @@
-<p>The Kawak throttle quadrant replaces the Air Tractor throttle quadrant and it operates similarly.</p>
+<p>The Kawak throttle quadrant replaces the Air Tractor throttle quadrant and it operates similarly. See below in <xref fileTarget="img_KawakThrottleQuadrant.png" xrefType="link">Fig Cross Reference</xref>. </p>
 
 <figure>
     <img class="imageCentered_3x3" src="img/img_KawakThrottleQuadrant.png">
