--- a/html/Maintenance/MVP-50T.html
+++ b/html/Maintenance/MVP-50T.html
@@ -1,1 +1,16 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<p>Besides periodic calibration, the MVP-50T only requires maintenance and troubleshooting when a problem occurs.</p>
+
+<p>When an issue arises, isolation and identification of the specific part of the system that is not operating properly should be the priority.  The Electronics International STC Installation Manual (Doc. 1211061) provides a troubleshooting section that may be useful, otherwise, the most straightforward method is to use a simple process of elimination.</p>
+
+<p> Wiring issues constitute a large percentage of total problems.  Refer to the following schematics to help isolate and fix wiring issues.  Be sure to check connectors for pins that are not fully inserted or that may not make good contact.  Also check for grounding and chaffing.</p>
+
+<figure>
+    <img class="imageCentered_5x3" src="img/img_MvpHeadSchematic.png">
+    <figcaption class="centerText">MVP Display Schematic</figcaption>
+</figure>
+
+<p><b>Screen in Cockpit is Blank and Unresponsive</b></p>
+<p>Either power and ground is disconnected or the screen is not functional and will need to be replaced.</p>
+
+<p></p>
+
