Fixed boost pump file

--- a/html/Maintenance/Electrical Fuel Boost Pump.html
+++ b/html/Maintenance/Electrical Fuel Boost Pump.html
@@ -3,5 +3,4 @@
 <figure>
     <img src="img/img_Fig_37.png" class="imageCentered_5x3">
     <figcaption class="centerText">Boost Pump Wiring Schematic</figcaption>
-</figure>                                                                                                        v b vbvbvbh8ughgu7cfnvgdgvcffhvcvgvdxhuygdgddddy7gdfdffdddxzgefswrswr
-
+</figure>
