--- a/html/Maintenance/Elevators.html
+++ b/html/Maintenance/Elevators.html
@@ -2,7 +2,7 @@
 
 <p>Like the rudder, the elevators and center pedestal have NMB p/n MS14104-4 spherical bearings installed, and due to bearing drag, it is very important for all bolts connecting the elevators and the horns to be fully torqued (100 inch-pounds at the nut). We have seen elevator horns with badly elongated holes because the elevators had been replaced in the field and the bolts were not fully torqued. </p>
 
-<p>To replace the bearings, see Section <xref sectionTarget="2.45.12" labelPrepend="Section"></xref>.</p>
+<p>To replace the bearings, see <xref sectionTarget="2.45.12" prependLabel="Section"></xref>.</p>
 
 <p>Elevator stops are at the elevator horn. The down stop has a p/n 70067-1 neoprene washer in compression to absorb shocks. Sometimes this washer splits and falls out so during 100 hour inspections, check to see if this washer is in place. Also, if the control stick is pulled back sharply against the up stop or if a wind gust blows the elevator up, the up stop bracket may bend and should be straightened if found to be bent. </p>
 
