Added correct figures and created correct xrefs

--- a/html/Maintenance/Flap Actuator Installation Instructions.html
+++ b/html/Maintenance/Flap Actuator Installation Instructions.html
@@ -1,22 +1,13 @@
-<p>The details for flap actuator installation are shown below. </p>
+<p>The details for flap actuator installation are shown in <xref fileTarget="img_Fig_27A.png" xrefType="link">Fig Cross Reference</xref>, <xref fileTarget="img_Fig_27B.png" xrefType="link">Fig Cross Reference</xref>, <xref fileTarget="img_Fig_27.png" xrefType="link">Fig Cross Reference</xref>, <xref fileTarget="img_Fig_27C.png" xrefType="link">Fig Cross Reference</xref>. </p>
 
 <figure>
-    <img class="imageCentered_3x4" src="img/img_Fig_27.png">
+    <img class="imageCentered_4x4" src="img/img_Fig_27.png">
     <figcaption class="centerText">Flap Actuator</figcaption>
 </figure>
 
-<figure>
-    <img class="imageCentered_4x3" src="img/img_Fig_27A.png">
-    <figcaption class="centerText">Flap Actuator</figcaption>
-</figure>
 
 <figure>
-    <img class="imageCentered_4x3" src="img/img_Fig_27B.png">
-    <figcaption class="centerText">Flap Actuator</figcaption>
-</figure>
-
-<figure>
-    <img class="imageCentered_4x3" src="img/img_Fig_27C.png">
+    <img class="imageCentered_6x4" src="img/img_Fig_27C.png">
     <figcaption class="centerText">Flap Actuator</figcaption>
 </figure>
 
