--- a/html/Maintenance/Flap Relay Troubleshooting.html
+++ b/html/Maintenance/Flap Relay Troubleshooting.html
@@ -19,7 +19,7 @@
   is not shorted to ground. If the coil is bad replace the relay.
 <p>
 
-<p>FLAP ACTUATOR (71112-1) OVERHAUL</p>
+<b>FLAP ACTUATOR (71112-1) OVERHAUL</b>
 
 <p>The flap actuator should be replaced or overhauled after 1500 hours of service to assure trouble free operation. If
   it is to be overhauled order a kit of parts from your dealer. The Overhaul kit part no. is 71112-1-500 and consists of
@@ -124,7 +124,7 @@
   the case, P/N 03-057 replacement brushes can be purchased from your dealer (2 required for each motor). For a
   replacement motor, order P/N 90-1026 from your dealer. </p>
 
-<p>ACTUATOR OVERHAUL STEPS </p>
+<b>ACTUATOR OVERHAUL STEPS </b>
 <ol type="1">
   <li>Save and reuse all hardware unless otherwise specified. </li>
   <li>Remove and inspect the 90-1026 flap motor. Replace on condition. Replace the motor brushes with P/N 03-057
