mvp section edits

--- a/html/Maintenance/MVP-50T.html
+++ b/html/Maintenance/MVP-50T.html
@@ -9,8 +9,10 @@
     <figcaption class="centerText">MVP Display Schematic</figcaption>
 </figure>
 
-<p><b>Screen in Cockpit is Blank and Unresponsive</b></p>
-<p>Either power and ground is disconnected or the screen is not functional and will need to be replaced.</p>
+<figure>
+    <img class="imageCentered_5x3" src="img/img_MvpRearSeatHeadSchematic.png">
+    <figcaption class="centerText">MVP Display Schematic</figcaption>
+</figure>
 
-<p></p>
+
 
