--- a/html/Maintenance/MVP-50T.html
+++ b/html/Maintenance/MVP-50T.html
@@ -11,8 +11,15 @@
 
 <figure>
     <img class="imageCentered_5x3" src="img/img_MvpRearSeatHeadSchematic.png">
-    <figcaption class="centerText">MVP Display Schematic</figcaption>
+    <figcaption class="centerText">Rear MVP Display Schematic</figcaption>
 </figure>
 
+<figure>
+    <img class="imageCentered_5x3" src="img/img_MvpTopConnectorPowerAndGroundSchematic.png">
+    <figcaption class="centerText">EDC Top Connector Power and Ground Schematic</figcaption>
+</figure>
 
-
+<figure>
+    <img class="imageCentered_6x6" src="img/img_MvpTopConnectorPressureSensorsSchematics.png">
+    <figcaption class="centerText">EDC Top Connector Power and Ground Schematic</figcaption>
+</figure>
