figure descsription updated

--- a/html/Maintenance/Flap Actuator.html
+++ b/html/Maintenance/Flap Actuator.html
@@ -53,12 +53,12 @@
 
        <figure>
               <img class="imageCentered_6x4" src="img/img_Fig_27A.png">
-              <figcaption class="centerText">Flap Actuator</figcaption>
+              <figcaption class="centerText">Flap Actuator - Gearbox Assembly</figcaption>
           </figure>
 
           <figure>
               <img class="imageCentered_6x4" src="img/img_Fig_27B.png">
-              <figcaption class="centerText">Flap Actuator</figcaption>
+              <figcaption class="centerText">Flap Actuator - Worm Shaft</figcaption>
           </figure>
 
 
