--- a/html/Maintenance/Flap Actuator Installation Instructions.html
+++ b/html/Maintenance/Flap Actuator Installation Instructions.html
@@ -2,13 +2,13 @@
 
 <figure>
     <img class="imageCentered_6x4" src="img/img_Fig_27.png">
-    <figcaption class="centerText">Flap Actuator</figcaption>
+    <figcaption class="centerText">Flap Actuator Components</figcaption>
 </figure>
 
 
 <figure>
     <img class="imageCentered_6x4" src="img/img_Fig_27C.png">
-    <figcaption class="centerText">Flap Actuator</figcaption>
+    <figcaption class="centerText">Flap Actuator - Actuator Shaft</figcaption>
 </figure>
 
     <ol type="1">
