--- a/html/Description/Electric Aileron Trim Tab.html
+++ b/html/Description/Electric Aileron Trim Tab.html
@@ -1,1 +1,2 @@
-<p style="color:red">CONTENT NOT CREATED</p>
+<p><b>Electric Aileron Trim Tab</b></p>
+<p> The electric aileron trim tab is positioned on the left aileron, and used to maintain roll stability. The switch next to the throttle assembly operates a servo motor on the trailing edge of the left aileron to articulate the trim tab in the system.</p>
