--- a/html/Maintenance/Flap Actuator Installation Instructions.html
+++ b/html/Maintenance/Flap Actuator Installation Instructions.html
@@ -2,7 +2,7 @@
 
 <figure>
     <img class="imageCentered_6x4" src="img/img_Fig_27.png">
-    <figcaption class="centerText">Flap Actuator Components</figcaption>
+    <figcaption class="centerText">Flap Actuator Installation</figcaption>
 </figure>
 
 
