updated flap wiring figures

--- a/html/Maintenance/Fuel Tank Receiver.html
+++ b/html/Maintenance/Fuel Tank Receiver.html
@@ -1,4 +1,4 @@
-<p>The schematic for the fuel-tank receiver is shown in <xref fileTarget="img_Fig_28.png" xrefType="link">Fig Cross Reference</xref>. </p>
+<p>The schematic for the fuel-tank receiver is shown in <span style="color: red;">FIND PROPER XREF FOR THIS!</span></p>
 
 <p>The fuel tank receiver is p/n 51274-1. There is an adjustment screw for the “E" side of the needle range on the center lower side of the instrument face. The trimmer screw for the “F" side of the needle range is remotely mounted behind the upper panel, just left of center. Since the slotted end of the trimmer screw is towards the aircraft bottom, it is possible to reach under the panel with a small screwdriver to reach the “F" trimmer screw. (Be sure the power is off). </p>
 
