Moved figs and added xref

--- a/html/Maintenance/Flap Actuator Installation Instructions.html
+++ b/html/Maintenance/Flap Actuator Installation Instructions.html
@@ -1,15 +1,10 @@
-<p>The details for flap actuator installation are shown in <xref fileTarget="img_Fig_27A.png" xrefType="link">Fig Cross Reference</xref>, <xref fileTarget="img_Fig_27B.png" xrefType="link">Fig Cross Reference</xref>, <xref fileTarget="img_Fig_27.png" xrefType="link">Fig Cross Reference</xref>, <xref fileTarget="img_Fig_27C.png" xrefType="link">Fig Cross Reference</xref>. </p>
+<p>The details for flap actuator installation are shown in <xref fileTarget="img_Fig_27A.png" xrefType="link">Fig Cross Reference</xref>. </p>
 
 <figure>
     <img class="imageCentered_6x4" src="img/img_Fig_27.png">
     <figcaption class="centerText">Flap Actuator Installation</figcaption>
 </figure>
 
-
-<figure>
-    <img class="imageCentered_6x4" src="img/img_Fig_27C.png">
-    <figcaption class="centerText">Flap Actuator - Actuator Shaft</figcaption>
-</figure>
 
     <ol type="1">
         <li>Re-install actuator in aircraft in reverse order as removal. </li>
