--- a/html/Maintenance/Flap Actuator.html
+++ b/html/Maintenance/Flap Actuator.html
@@ -22,7 +22,7 @@
 
        <p>There is a potentially dangerous condition that may develop due to the cracking and separation of the flap motor mounting studs.</p>
        <ul>
-              <li>Locate the flap actuator and inspect the flap motor for security. Ensure that both flap motor attachment studs are in place and that the studs are not cracked. See <xref fileTarget="img_Fig_27.png" xrefType="link">Fig Cross Reference</xref>.</li>
+              <li>Locate the flap actuator and inspect the flap motor for security. Ensure that both flap motor attachment studs are in place and that the studs are not cracked. See <xref fileTarget="img_Fig_27A.png" xrefType="link">Fig Cross Reference</xref></li>
               <li>To inspect for cracks, remove the nut and washer and visually inspect. </li>
               <li>If a cracked or broken stud is found: install new AN565A1032H16 studs per Section 6 of Service Letter #375</li>
        </ul>
@@ -43,23 +43,28 @@
        (tee) assembly is fitted on the ball nut and held in place with the 71152-1 yoke nut assembly. This yoke nut
        includes a steel grease shield and is secured on the ball nut with two 90289A338 set screws. The yoke assembly is
        attached to two 1/4" thick aluminum 70032-1 arm assemblies that are bolted with four AN4-7A bolts to the flap
-       torque tube assembly. See <xref fileTarget="img_Fig_27A.png" xrefType="link">Fig Cross Reference</xref> and <xref fileTarget="img_Fig_27B.png" xrefType="link">Fig Cross Reference</xref>. </p>
+       torque tube assembly. See <xref fileTarget="img_Fig_27B.png" xrefType="link">Fig Cross Reference</xref>, <xref fileTarget="img_Fig_27C.png" xrefType="link">Fig Cross Reference</xref>, and <xref fileTarget="img_Fig_27A.png" xrefType="link">Fig Cross Reference</xref> below. </p>
 
        <div class='boxCautionLarge'>
               <p class='boxCautionLargeHeader'>CAUTION</p>
               <p class='boxCautionLargeText'>Have someone hold up on the flap trailing edge so the flaps will not fall down
                      against the boom hangers.</p>
        </div>
+<figure>
+ <img class="imageCentered_6x4" src="img/img_Fig_27B.png">
+ <figcaption class="centerText">Flap Actuator - Worm Shaft</figcaption>
+ </figure>
 
-       <figure>
-              <img class="imageCentered_6x4" src="img/img_Fig_27A.png">
-              <figcaption class="centerText">Flap Actuator - Gearbox Assembly</figcaption>
-          </figure>
+<figure>
+    <img class="imageCentered_6x4" src="img/img_Fig_27C.png">
+    <figcaption class="centerText">Flap Actuator - Actuator Shaft</figcaption>
+</figure>
 
-          <figure>
-              <img class="imageCentered_6x4" src="img/img_Fig_27B.png">
-              <figcaption class="centerText">Flap Actuator - Worm Shaft</figcaption>
-          </figure>
+<figure>
+ <img class="imageCentered_6x4" src="img/img_Fig_27A.png">
+ <figcaption class="centerText">Flap Actuator - Gearbox Assembly</figcaption>
+</figure>
+
 
 
 <p>See <xref sectionTarget="2.70.8" prependLabel="Section"></xref> for a step-by-step procedure for removing the actuator assembly from the aircraft. </p>
