added xref to flaps

--- a/html/Maintenance/Flap Relay Troubleshooting.html
+++ b/html/Maintenance/Flap Relay Troubleshooting.html
@@ -1,12 +1,12 @@
 <p>If the micro-switches and the flap motor appear OK then the trouble may be in the relays. Details of the flap relays
-  are shown in the figure below.</P>
+  are shown in <xref fileTarget="img_FlapSchematic.png" xrefType="link">Fig Cross Reference</xref> below.</P>
 
 <figure>
     <img class="imageCentered_6x6" src="img/img_FlapSchematic.png">
     <figcaption class="centerText">Flap System Schematic</figcaption>
 </figure>
 
-<p>When the optional rear seat flap switch is installed, the switch wiring is modified as shown below.</p>
+<p>When the optional rear seat flap switch is installed, the switch wiring is modified as shown below in <xref fileTarget="img_FlapSchematicDualSwitches.png" xrefType="link">Fig Cross Reference</xref>.</p>
 <figure>
     <img class="imageCentered_4x4" src="img/img_FlapSchematicDualSwitches.png">
     <figcaption class="centerText">Dual Flap Switch Schematic</figcaption>
