--- a/html/Maintenance/Elevator Trim Tab Controls.html
+++ b/html/Maintenance/Elevator Trim Tab Controls.html
@@ -1,4 +1,4 @@
-<p>Details of the elevator trim tab cockpit controls are shown in Figure 8.  The elevator trim tab system uses the elevator tabs as both trim tabs and as elevator boost tabs. The boost tabs function to relieve a portion of the control load during maneuvers. </p>
+<p>Details of the elevator trim tab cockpit controls are shown in <b> Figure 8</b>.  The elevator trim tab system uses the elevator tabs as both trim tabs and as elevator boost tabs. The boost tabs function to relieve a portion of the control load during maneuvers. </p>
 
 <p>Elevator trim is controlled by a handwheel on the left-hand wall of the cockpit. The handwheel is shaft-connected to a two-sheave drum that drives two taut and opposing cables. These are connected at their opposite end to a pulley shaft that positions a worm gear in a gear box that is located in the aft fuselage. The worm-gear box is shown below in <xref fileTarget="img_Fig_18.png" xrefType="link">Fig Cross Reference</xref>. </p>
 
