--- a/html/Description/Rudder Controls.html
+++ b/html/Description/Rudder Controls.html
@@ -1,6 +1,6 @@
 <p>The rudder controls consist of stainless-steel cables that are connected between the rudder pedals and the rudder-control horn. The rudder stops are located at the rudder horn.  There is a spring loaded interconnect system between the rudder and the aileron systems that eases turn coordination. This interconnect also allows banking the aircraft with rudder application alone. </p>
-<p>The layout of the rudder-control system is shown below in <xref fileTarget="img_Fig_9.png" xrefType="link">Fig Cross Reference</xref>. </p>
+<p>The layout of the rudder-control system is shown below in <xref fileTarget="img_ruddercontrollayout.PNG" xrefType="link">Fig Cross Reference</xref>. </p>
 <figure>
-    <img class="imageCentered_6x6" src="img/img_Fig_9.png">
+    <img class="imageCentered_6x4" src="img/img_ruddercontrollayout.PNG">
     <figcaption class="centerText">Layout- Rudder Control</figcaption>
 </figure>
