--- a/html/Description/Kawak Throttle Quadrant.html
+++ b/html/Description/Kawak Throttle Quadrant.html
@@ -2,7 +2,7 @@
 
 <figure>
     <img class="imageCentered_3x3" src="img/img_KawakThrottleQuadrant.png">
-    <figcaption class="centerText">Air Tractor Throttle Quadrant</figcaption>
+    <figcaption class="centerText">Kawak Throttle Quadrant</figcaption>
 </figure>
 
 <p>The Kawak throttle quadrant can also come equipped with the Power Stop feature which is an adjustable torque lever stop that allows for pre-selection of desired max torque.</p>
