--- a/html/Maintenance/Flap Actuator.html
+++ b/html/Maintenance/Flap Actuator.html
@@ -79,7 +79,7 @@
 <b>Air Tractor 71112-1 Flap Actuator Overhaul</b>
 
 <p>The flap actuator should be replaced or overhauled after 1500 hours of service to assure trouble free operation. If
-  it is to be overhauled order a kit of parts from your dealer. The Overhaul kit part no. is 71112-1-500 and consists of
+  it is to be overhauled order a kit of parts from your dealer. The Overhaul kit p/n is 71112-1-500 and consists of
   the following parts: </p>
 
 <table class="plainTableLarge">
