added correct xref

--- a/html/Maintenance/Fuel Filter Cleaning.html
+++ b/html/Maintenance/Fuel Filter Cleaning.html
@@ -1,4 +1,4 @@
-<p>The firewall fuel filter is shown below in FIG 46. Should something get into the system, your aircraft is equipped with a fuel filter located on the firewall between the batteries. The filter element for this is a FRAM CS1133PL. The firewall filter element is inexpensive, and should be replaced at least every 100 hours. If you are using fuel from a source not equipped with a water separator, change the element every 50 hours as follows: </p>
+<p>The firewall fuel filter is shown in <xref fileTarget="img_Fig_46.png" xrefType="link">Fig Cross Reference</xref>. Should something get into the system, your aircraft is equipped with a fuel filter located on the firewall between the batteries. The filter element for this is a FRAM CS1133PL. The firewall filter element is inexpensive, and should be replaced at least every 100 hours. If you are using fuel from a source not equipped with a water separator, change the element every 50 hours as follows: </p>
 
     <ol type="1">
         <li>Loosen the center nut of the top of the filter assembly.</li>
