--- a/html/Maintenance/Belt Tensioning.html
+++ b/html/Maintenance/Belt Tensioning.html
@@ -1,4 +1,4 @@
-<p> The belt for the air conditioning system must be tightened correctly to not decrease belt or bearing life. The belt is held in place using a belt-tension turnbuckle and is secured with safety wire, as seen in <xref fileTarget="img_BeltTensioning.png" xrefType="link">Fig Cross Reference</xref> below. Before tightening the turnbuckle, verify that the drive pulleys are properly aligned. If they are not, loosen the set screw in the small pulley on the compressor drive and adjust the small pulley to align the two. Once aligned, tighten the set screw. </p>
+<p> The belt for the air conditioning system must be tightened correctly. The belt is held in place using a belt-tension turnbuckle and is secured with safety wire, as seen in <xref fileTarget="img_BeltTensioning.png" xrefType="link">Fig Cross Reference</xref> below. Before tightening the turnbuckle, verify that the drive pulleys are properly aligned. If they are not, loosen the set screw in the small pulley on the compressor drive and adjust the small pulley to align the two. Once aligned, tighten the set screw. </p>
 
 <figure>
     <img class="imageCentered_5x3" src="img/img_BeltTensioning.png">
