--- a/html/Maintenance/MVP-50T.html
+++ b/html/Maintenance/MVP-50T.html
@@ -23,3 +23,40 @@
     <img class="imageCentered_6x6" src="img/img_MvpTopConnectorPressureSensorsSchematics.png">
     <figcaption class="centerText">EDC Top Connector Power and Ground Schematic</figcaption>
 </figure>
+
+
+<figure>
+    <img class="imageCentered_6x4" src="img/img_MvpAirFilterAndFuelFilterSchematics.png">
+    <figcaption class="centerText">EDC Top Middle Connector - Air and Fuel Filter Annunciators</figcaption>
+</figure>
+
+
+<figure>
+    <img class="imageCentered_6x4" src="img/img_MvpIttSchematic.png">
+    <figcaption class="centerText">EDC Top Middle Connector - ITT</figcaption>
+</figure>
+
+<figure>
+    <img class="imageCentered_6x4" src="img/img_MvpOatAndOilTempSchematics.png">
+    <figcaption class="centerText">EDC Top Middle Connector - OAT and Oil Temperature</figcaption>
+</figure>
+
+<figure>
+    <img class="imageCentered_6x4" src="img/img_MvpChipDetectorSchematics.png">
+    <figcaption class="centerText">EDC Top Middle Connector - Chip Detectors</figcaption>
+</figure>
+
+<figure>
+    <img class="imageCentered_6x4" src="img/img_MvpBetaLightSchematics.png">
+    <figcaption class="centerText">EDC Top Middle Connector - Beta Light Annunciator</figcaption>
+</figure>
+
+<figure>
+    <img class="imageCentered_6x4" src="img/img_MvpTachometerSchematics.png">
+    <figcaption class="centerText">EDC Top Bottom Connector - Tachometers</figcaption>
+</figure>
+
+<figure>
+    <img class="imageCentered_6x4" src="img/img_MvpFuelCapacitySchematics.png">
+    <figcaption class="centerText">EDC Top Bottom Connector - Fuel Capacity</figcaption>
+</figure>
