--- a/html/Repairs/FUSELAGE FRAME REPAIRS.html
+++ b/html/Repairs/FUSELAGE FRAME REPAIRS.html
@@ -16,6 +16,4 @@
     stress relieved according to PS125. All other areas of the frame may be repaired by tig or gas welding in the
     field. Use FAA AC 43.13 us a guide to general weld repairs.</p>
 
-<p>After welding, clean, sand, etch, prime and finish coat as described under <span style="color: red;">PAINTING STEEL
-        PARTS in Section
-        2- MAINTENANCE.</span></p>
+<p>After welding, clean, sand, etch, prime and finish coat as described under <xref sectionTarget="2.105.3" prependLabel="Section"></xref></p>
