Added section info from Old Manual and added fig / xref

--- a/html/Repairs/Horizontal Stabilizer Strut Fitting.html
+++ b/html/Repairs/Horizontal Stabilizer Strut Fitting.html
@@ -1,1 +1,6 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<p> See <xref fileTarget="img_REPAIR_StabilizerStrutFitting.png" xrefType="link">Fig Cross Reference</xref> below for repairs on the horizontal stabilizer strut fitting. This drawing is used to repair worn holes at the lower horizontal stabilizer strut attachment point. Applicability is as shown with the bushing callout in the field of drawing.</p>
+
+<figure>
+    <img class="imageCentered_6x6" src="img/img_REPAIR_StabilizerStrutFitting.png">
+    <figcaption class="centerText">Repair-Stabilizer Strut Fitting</figcaption>
+</figure>
