--- a/html/Repairs/MAJOR STRUCTURAL DAMAGE.html
+++ b/html/Repairs/MAJOR STRUCTURAL DAMAGE.html
@@ -1,1 +1,2 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<p> The AT-802/802A should be repaired at the factory or by a factory-appointed repair facility when there is major 
+structural damage.</p>
