added repair - horz stabilizer strut fitting description

--- a/html/Repairs/Horizontal Stabilizer Strut Fitting.html
+++ b/html/Repairs/Horizontal Stabilizer Strut Fitting.html
@@ -1,2 +1,6 @@
-<p> See below for repairs on the horizontal stabilizer strut fitting. This drawing is used to repair worn holes at the lower horizontal stabilizer strut attachment point. Applicability is as shown with the bushing callout in the field of drawing.</p>
+<p> See <b> FIGURE </b> below for repairs on the horizontal stabilizer strut fitting. This drawing is used to repair worn holes at the lower horizontal stabilizer strut attachment point. Applicability is as shown with the bushing callout in the field of drawing.</p>
 
+<figure>
+    <img class="imageCentered_6x4" src="img/img_REPAIR_StabilizerStrutFitting.png">
+    <figcaption class="centerText">Drawing 12167 - Repair of the Stabilizer Strut Fitting</figcaption>
+</figure>
