--- a/html/Repairs/Main Gear Attach Tube Cracks.html
+++ b/html/Repairs/Main Gear Attach Tube Cracks.html
@@ -1,1 +1,8 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<p> This repair is for cracks on the lower side of the AT-802 landing gear attach tube assembly. All cracks should be ground out and welded up prior to the installation of the gusset. The end of crack should measure no more than 3/4 in. from the lower bushing weld.</p>
+
+<p> Install gusset on lower side of landing gear attach tube assembly as shown and weld all around per PS144. In lieu of placing in a cool down box following completion of welding, wrap an insulated welders blanket around the area for the cool down period. Be sure landing gear leg clears all welds when installed.</p>
+
+<figure>
+    <img class="imageCentered_6x4" src="img/img_REPAIR_StabilizerStrutFitting.png">
+    <figcaption class="centerText">Drawing 12167 - Repair of the Stabilizer Strut Fitting</figcaption>
+</figure>
