--- a/html/Inspection/Insp_Obstacle Collision.html
+++ b/html/Inspection/Insp_Obstacle Collision.html
@@ -1,1 +1,6 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<p>
+     If an obstruction is 
+hit with the main gear, change the forward clamp bolt and check the clamp block for straightness per 
+<span style="color: red;">This referred to a straightness check in the manual that doesn't exist...need to add a procedure!</span>
+.
+</p>
