--- a/html/Limitations/RevisionHistory.html
+++ b/html/Limitations/RevisionHistory.html
@@ -31,8 +31,13 @@
         <td class="plainTableNormalCell">Monica Merritt</td>
     </tr>
     <tr>
-        <td class="plainTableNormalCell">9/16/09</td>
-        <td class="plainTableNormalCell">Change Replacement Times</td>
-        <td class="plainTableNormalCell">Monica Merritt</td>
+        <td class="plainTableNormalCell">3/11/20</td>
+        <td class="plainTableNormalCell">Update Notes; Add Part No.</td>
+        <td class="plainTableNormalCell">James A Grigg</td>
+    </tr>
+        <tr>
+        <td class="plainTableNormalCell">12/12/24</td>
+        <td class="plainTableNormalCell">Updated Regulation Reference</td>
+        <td class="plainTableNormalCell"></td>
     </tr>
 </table>
