added figures into section 5 REPAIRS

--- a/html/Repairs/Fuselage Frame Aft Section.html
+++ b/html/Repairs/Fuselage Frame Aft Section.html
@@ -11,6 +11,11 @@
 <p>The second failure was in the side diagonal p/n 11001-9l that extends upward and forward from the tail gear spring forward attach location. The failure was compressive buckling of the tube.
 </p>
 
+<figure>
+    <img class="imageCentered_6x4" src="img/img_REPAIRFUselageFrameAftSection.png">     
+    <figcaption class="centerText">Drawing 12270 - Repair of the Aft Fuselage Frame</figcaption>
+</figure>
+
 <p>In both instances the operator of the aircraft reported violent tail wheel shimmy before the failure was discovered. A tail wheel that shimmies can produce high side loads in the fuselage structure especially if the shimmy couples with the natural frequency in torsion of the aft fuselage structure.
 </p>
 
