--- a/html/Repairs/Leading Edge Rib.html
+++ b/html/Repairs/Leading Edge Rib.html
@@ -1,1 +1,6 @@
 <p style="color: red;">CONTENT NOT CREATED</p>
+
+<figure>
+    <img class="imageCentered_6x4" src="img/img_REPAIRLeadingEdgeRib.png">
+    <figcaption class="centerText">Drawing 21065 - Repair of Cracks in the Wing Leading Edge Ribs</figcaption>
+</figure>
