--- a/html/Repairs/Main Gear Attach Tube Cracks.html
+++ b/html/Repairs/Main Gear Attach Tube Cracks.html
@@ -3,6 +3,6 @@
 <p> Install gusset on lower side of landing gear attach tube assembly as shown and weld all around per PS144. In lieu of placing in a cool down box following completion of welding, wrap an insulated welders blanket around the area for the cool down period. Be sure landing gear leg clears all welds when installed.</p>
 
 <figure>
-    <img class="imageCentered_6x4" src="img/img_REPAIR_StabilizerStrutFitting.png">
-    <figcaption class="centerText">Drawing 12167 - Repair of the Stabilizer Strut Fitting</figcaption>
+    <img class="imageCentered_6x4" src="img/img_REPAIRMainGearAttachTube.png">
+    <figcaption class="centerText">Drawing SK465 - Weld Repair of the Main Gear Tube</figcaption>
 </figure>
