--- a/html/Repairs/Wing Main Spar Splice.html
+++ b/html/Repairs/Wing Main Spar Splice.html
@@ -1,1 +1,7 @@
 <p style="color: red;">CONTENT NOT CREATED</p>
+
+<figure>
+    <img class="imageCentered_6x4" src="img/img_REPAIRWingMainSparSplice.png">
+    <figcaption class="centerText">Drawing 20870 - Repair of the Wing Main Spar Splice</figcaption>
+</figure>
+<figure>
