--- a/html/Repairs/Additional Wing Inspection Holes.html
+++ b/html/Repairs/Additional Wing Inspection Holes.html
@@ -1,1 +1,6 @@
 <p style="color: red;">CONTENT NOT CREATED</p>
+
+<figure>
+    <img class="imageCentered_6x4" src="img/img_REPAIRAdditionalWingInspectionHoles.png">
+    <figcaption class="centerText">Drawing 21066 - Installation of Additional Wing Leading Edge Inspection Plates</figcaption>
+</figure>
