--- a/html/Repairs/Elevator - Rudder Hinge.html
+++ b/html/Repairs/Elevator - Rudder Hinge.html
@@ -1,1 +1,11 @@
 <p style="color: red;">CONTENT NOT CREATED</p>
+
+<figure>
+    <img class="imageCentered_6x4" src="img/img_REPAIRElevatorRudderHinge1.png">
+    <figcaption class="centerText">Drawing 30789 - Repair of Elevator or Rudder Hinges</figcaption>
+</figure>
+
+<figure>
+    <img class="imageCentered_6x4" src="img/img_REPAIRElevatorRudderHinge2.png">
+    <figcaption class="centerText">Drawing 30789 - Repair of Elevator or Rudder Hinges</figcaption>
+</figure>
