--- a/html/Repairs/Forward Lower Longeron.html
+++ b/html/Repairs/Forward Lower Longeron.html
@@ -1,1 +1,6 @@
 <p style="color: red;">CONTENT NOT CREATED</p>
+
+<figure>
+    <img class="imageCentered_6x4" src="img/img_REPAIRForwardLowerLongeron.png">
+    <figcaption class="centerText">Drawing 12249 - Repair of the Forward Lower Longeron</figcaption>
+</figure>
