--- a/html/Repairs/Oversized Horizontal Stabilizer Attach Holes.html
+++ b/html/Repairs/Oversized Horizontal Stabilizer Attach Holes.html
@@ -1,1 +1,6 @@
 <p style="color: red;">CONTENT NOT CREATED</p>
+
+<figure>
+    <img class="imageCentered_6x4" src="img/img_REPAIROversizedHorizontalStab.png">
+    <figcaption class="centerText">Drawing 30763 - Repair of Oversize Holes in the Horizontal Stabilizer Attach</figcaption>
+</figure>
