--- a/html/Repairs/Tail Wheel Lock Bushing.html
+++ b/html/Repairs/Tail Wheel Lock Bushing.html
@@ -1,1 +1,7 @@
 <p style="color: red;">CONTENT NOT CREATED</p>
+
+<figure>
+    <img class="imageCentered_6x4" src="img/img_REPAIRTailWheelLockBushing.png">
+    <figcaption class="centerText">Drawing 40155 - Installation of the Tail Wheel Lock Bushing
+</figcaption>
+</figure>
