--- a/html/Repairs/Horizontal Stabilizer Strut Fitting.html
+++ b/html/Repairs/Horizontal Stabilizer Strut Fitting.html
@@ -1,4 +1,4 @@
-<p> See below for repairs on the horizontal stabilizer strut fitting. This drawing is used to repair worn holes at the lower horizontal stabilizer strut attachment point. Applicability is as shown with the bushing callout in the field of drawing.</p>
+<p> See <xref fileTarget="img_REPAIRStabilizerStrutFitting.png" xrefType="link">Fig Cross Reference</xref> below for repairs on the horizontal stabilizer strut fitting. This drawing is used to repair worn holes at the lower horizontal stabilizer strut attachment point. Applicability is as shown with the bushing callout in the field of drawing.</p>
 
 <figure>
     <img class="imageCentered_6x4" src="img/img_REPAIRStabilizerStrutFitting.png">
