--- a/html/Repairs/Fuselage Frame Aft Section.html
+++ b/html/Repairs/Fuselage Frame Aft Section.html
@@ -1,4 +1,4 @@
-<p>For serial numbers -0001 through -0139 (aircraft equipped with the factory-supplied p/n 80540 computerized fire gate and engaged in full-time firefighting are exempt), there have been reports of cracks or failures of the upper longeron on the left hand side of the fuselage frame just forward of the stabilizer front spar attach fitting. We believe that these cracks or failures are associated with high vertical loads during repeated hard turns. 
+<p>For serial numbers -0001 through -0139 (aircraft equipped with the factory-supplied p/n 80540 computerized fire gate and engaged in full-time firefighting are exempt), there have been reports of cracks or failures of the upper longeron on the left hand side of the fuselage frame just forward of the stabilizer front spar attach fitting, as seeen in <xref fileTarget="img_REPAIRFUselageFrameAftSection.png" xrefType="link">Fig Cross Reference</xref>. We believe that these cracks or failures are associated with high vertical loads during repeated hard turns. 
 </p>
 
 <p>For more information regarding inspections and repairs, refer to Service Letter #195, Service Letter #217A and Service Letter #217B.</p>
