--- a/html/Repairs/Main Gear Attach Tube Cracks.html
+++ b/html/Repairs/Main Gear Attach Tube Cracks.html
@@ -1,6 +1,6 @@
 <p> This repair is for cracks on the lower side of the AT-802 landing gear attach tube assembly. All cracks should be ground out and welded up prior to the installation of the gusset. The end of crack should measure no more than 3/4 in. from the lower bushing weld.</p>
 
-<p> Install gusset on lower side of landing gear attach tube assembly as shown and weld all around per PS144. In lieu of placing in a cool down box following completion of welding, wrap an insulated welders blanket around the area for the cool down period. Be sure landing gear leg clears all welds when installed.</p>
+<p> Install gusset on lower side of landing gear attach tube assembly as shown in <xref fileTarget="img_REPAIRMainGearAttachTube.png" xrefType="link">Fig Cross Reference</xref> and weld all around per PS144. In lieu of placing in a cool down box following completion of welding, wrap an insulated welders blanket around the area for the cool down period. Be sure landing gear leg clears all welds when installed.</p>
 
 <figure>
     <img class="imageCentered_6x4" src="img/img_REPAIRMainGearAttachTube.png">
