--- a/html/Maintenance/Engine Removal.html
+++ b/html/Maintenance/Engine Removal.html
@@ -42,7 +42,7 @@
 </div>
 
 <ol type="1">
-    <li>Ensure batter switch (BATT) is OFF.</li>
+    <li>Ensure battery switch (BATT) is OFF.</li>
     <li>Turn fuel valve selector lever to OFF.</li>
     <li>Remove engine side cowlings, top cowling, and bottom cowling.</li>
     <li>Disconnect batteries. (Accessible after removal of bottom cowling.)</li>
