added xref for figure

--- a/html/Maintenance/Electrical Fuel Boost Pump.html
+++ b/html/Maintenance/Electrical Fuel Boost Pump.html
@@ -1,4 +1,4 @@
-<p>The wiring schematic for the boost pump is shown below.</p>
+<p>The wiring schematic for the boost pump is shown in <xref fileTarget="img_Fig_37.png" xrefType="link">Fig Cross Reference</xref>.</p>
 
 <figure>
     <img src="img/img_Fig_37.png" class="imageCentered_5x3">
