--- a/html/Maintenance/Low-Voltage Warning Light.html
+++ b/html/Maintenance/Low-Voltage Warning Light.html
@@ -1,3 +1,8 @@
-<p>The wiring schematic for the Low-Voltage Warning Light is shown in Figure 36. This warning light operates parallel with the Voltmeter to provide an indication of Starter/Generator failure. The warning light senses the voltage on the airplane bus. The light comes ON at any time that the master switch is ON and the voltage on the airplane bus drops below 25 volts. Because the normal battery voltage is 24 volts, it follows that the light will be ON at any time that the generator is not producing more than 25 volts on the bus. </p>
+<p>The wiring schematic for the Low-Voltage Warning Light is shown in FIGURE 36 below. This warning light operates parallel with the Voltmeter to provide an indication of Starter/Generator failure. The warning light senses the voltage on the airplane bus. The light comes ON at any time that the master switch is ON and the voltage on the airplane bus drops below 25 volts. Because the normal battery voltage is 24 volts, it follows that the light will be ON at any time that the generator is not producing more than 25 volts on the bus. </p>
+
+<figure>
+    <img src="img/img_Fig_36.png" class="imageCentered_5x3">
+    <figcaption class="centerText">Boost Pump Wiring Schematic</figcaption>
+</figure>
 
 <p>The Low Voltage Warning Light is a self-contained unit that uses solid-state circuitry and a light bulb. The light bulb is not replaceable. Failure of the warning light requires replacement of the entire unit. </p>
