--- a/html/Maintenance/Spray Plumbing.html
+++ b/html/Maintenance/Spray Plumbing.html
@@ -1,4 +1,4 @@
-<p>Details of the spray plumbing are shown below. </p>
+<p>Details of the spray plumbing are shown below in <xref fileTarget="img_Fig_64.png" xrefType="link">Fig Cross Reference</xref>. </p>
 
 <figure>
     <img class="imageCentered_4x3" src="img/img_Fig_64.png">
