--- a/html/Maintenance/Spray Pump.html
+++ b/html/Maintenance/Spray Pump.html
@@ -1,9 +1,9 @@
 <p>The spray pump is an Agrinautics p/n 65715 attached to an Agrinautics p/n 60130 strut assembly with AN5-12A bolts. </p>
 
-<p>The standard fan is the Micronair AT-4300 five-blade fan, which is used for low-to-moderate spray volume. For high-volume applications, install the Arrowprop A2-AT4T34 four-blade fan or the Weathaero FA100 fan. Add 48 nozzles to spray booms and change the spray tips on the spray nozzles to larger ones. Figure <xref fileTarget="img_Fig_63.png" xrefType="link">Fig Cross Reference</xref> below shows some typical spray configurations, as well as a chart of available flat fan spray tips. Chart <xref fileTarget="img_Fig_63.png" xrefType="link">Fig Cross Reference</xref> shows the orifice size and flow rate of the various tips at common spray pressures. </p>
+<p>The standard fan is the Micronair AT-4300 five-blade fan, which is used for low-to-moderate spray volume. For high-volume applications, install the Arrowprop A2-AT4T34 four-blade fan or the Weathaero FA100 fan. Add 48 nozzles to spray booms and change the spray tips on the spray nozzles to larger ones. <xref fileTarget="img_Fig_63.png" xrefType="link">Fig Cross Reference</xref> below shows some typical spray configurations, as well as a chart of available flat fan spray tips. <xref fileTarget="img_Fig_63.png" xrefType="link">Fig Cross Reference</xref> shows the orifice size and flow rate of the various tips at common spray pressures. </p>
 
 <figure>
-    <img class="imageCentered_5x3" src="img/img_Fig_63.png">
+    <img class="imageCentered_6x4" src="img/img_Fig_63.png">
     <figcaption class="centerText">Spray Pump Chart</figcaption>
 </figure>
 
