repair format update

--- a/html/Repairs/Minor Skin Damage.html
+++ b/html/Repairs/Minor Skin Damage.html
@@ -40,8 +40,8 @@ involved.
 </p>
 
 <p>
-    Negligible damage may be left as is or may be cotTected by a simple procedure without
-restricting flight. In both cases, some coITective action must be taken to keep the damage from
+    Negligible damage may be left as is or may be corrected by a simple procedure without
+restricting flight. In both cases, some corrective action must be taken to keep the damage from
 spreading. Negligible or minor damage areas must be inspected frequently to ensure the damage
 does not spread. Permissible limits for negligible damage vary for different components of
 different aircraft and should be carefully researched on an individual basis. Failure to ensure that
