--- a/html/Repairs/Tail Wheel Lock Bushing.html
+++ b/html/Repairs/Tail Wheel Lock Bushing.html
@@ -1,6 +1,7 @@
 <p><b>Summary</b></p>
 <p>
-    The tail wheel lock bushing should be replaced if looseness or damage is observed.  See Dwg 40155 for installation details.
+    The tail wheel lock bushing should be replaced if looseness or damage is observed. See Dwg 40155 for installation
+    details.
 </p>
 
 <p><b>Repair Information</b></p>
@@ -21,14 +22,11 @@
         <th class="plainTableHeaderCell cellWidth3_0 leftAlignText">Additional Maintenance Requirements</th>
         <td class="plainTableNormalCell">None</td>
     </tr>
-        <tr>
-        <th class="plainTableHeaderCell cellWidth3_0 leftAlignText">Reporting Requirement</th>
-        <td class="plainTableNormalCell">Logbook entry</td>
-    </tr>
+    <tr>
 </table>
 
 <figure>
     <img class="imageCentered_6x4" src="img/img_REPAIRTailWheelLockBushing.png">
     <figcaption class="centerText">Drawing 40155 - Installation of the Tail Wheel Lock Bushing
-</figcaption>
+    </figcaption>
 </figure>
