--- a/html/Repairs/Minor Skin Damage.html
+++ b/html/Repairs/Minor Skin Damage.html
@@ -1,7 +1,7 @@
 <p>
 There is a
 difference in the structural requirement of fuselage skins as opposed to wing and tail surface
-skins. The skins of the fuselage are not primary structure and the tolerance for damage in
+skins. The skins of the fuselage are not a primary structure and the tolerance for damage in
 fuselage skins is greater than that of stressed skin design of wing and tail surface skins.
 </p>
 
